Issue 15: Presto integration tests (#18)
* Adds test implementing AbstractTestQueries (TestPravegaDistributed)
* Adds integration test for pravega key/value tables (TestPravegaKeyValue)
* Tiny bit of code refactoring in order to better use a couple of methods in test code. Moves some code from PravegaTableDescriptionSupplier to util/PravegaStreamDescUtils. No changes in functionality.
* Runs integration tests only if -Pintegration flag is set (e.g. ./gradlew test -Pintegration)
* github actions updated to run integration tests

Signed-off-by: Andrew Robertson <andrew.robertson@dell.com>